# phoenix

./: Cargo.toml  LICENSE  build.rs
phoenix-client/: Cargo.toml
phoenix-client/src/: main.rs
phoenix-lib/: Cargo.toml
phoenix-lib/proto/: phoenix.proto
phoenix-manager/: Cargo.toml
phoenix-server/: Cargo.toml  server.toml
phoenix-server/db/server/: schema.sql
phoenix-server/src/: main.rs
proto/: phoenix.proto
src/: client.rs
